--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="info">
         <h3> <span> Name : </span> Jivan Jitendra Pisal </h3>
         <h3> <span> Age : </span> 21 </h3>
-        <h3> <span> Qualification : </span> Ungergraduate (BE IT) </h3>
+        <h3> <span> Qualification : </span> Undergraduate (BE IT) </h3>
         <h3> <span> Skill : </span> Front End Web Development, C++ Programming </h3>
         <h3> <span> language : </span> English, Hindi, Marathi </h3>
         <a href="https://drive.google.com/file/d/1aU3CJPgbDJG2ymwtDZF8GxxG5UoVX8TW/view?usp=sharing"><button class="btn"> Download Resume <i class="fas fa-download"></i> </button></a>
