--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
         <h3 class="title">Contact Info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i> jivanjpisal@gmail.com </h3>
+           
+            
+            <h3> <i class="fas fa-envelope"></i><p style="text-transform: lowercase;">jivanjpisal@gmail.com</p></h3>
             <h3> <i class="fas fa-phone"></i> +91 9373956479 </h3>
            <h3> <i class="fas fa-map-marker-alt"></i> Shirwal, Satara, Maharashtra 412801 </h3>
         </div>
