--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     </div>
 <p>
-   <strong><br><h3 style="color:yellow;">On 12-10-2020</strong></br></h3><h3>the Satara District Vice President of the Engineering Action Committee, I met Hon. MLA Makrand Aaba Patil and discussed various issues of the students. He assured that a 20% discount should be given in tuition fees and other unnecessary fees should be cancelled.</h3>
+   <strong><br><h3 style="color:yellow;">On 12-10-2020</strong></br></h3><h3>As Satara District Vice President of the Engineering Action Committee, I met Hon. MLA Makrand Aaba Patil and discussed various issues of the students. He assured that a 20% discount should be given in tuition fees and other unnecessary fees should be cancelled.</h3>
 </p>
 <br>
 
