--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
     </div>
     
     <a href="https://www.linkedin.com/in/jivan-pisal"><button class="btn"> Visit Linkedin Profile <i class="fas fa-download"></i> </button></a>
+    
+    <a href="https://www.xing.com/profile/Jivan_Pisal"><button class="btn"> Visit Xing Profile <i class="fas fa-download"></i> </button></a>
 
 </div>
 
