--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <h3> <span> language : </span> English, Hindi, Marathi </h3>
         <a href="https://docs.google.com/presentation/d/1BCmVVNbb4es4DFX1Cmd43WFZlB1NN7tf/edit?usp=sharing&ouid=100911649842367521689&rtpof=true&sd=true"><button class="btn">My Project (Drone Safety System)<i class="fas fa-download"></i> </button></a>
         <a href="https://drive.google.com/file/d/1xeC7lGf3VFHbVCDFNEiRV-_AntIatTWP/view?usp=sharing"><button class="btn"> Download Resume <i class="fas fa-download"></i> </button></a>
+         <a href="https://g.dev/jivanpisal"><button class="btn"> Visit Google Developer Profile <i class="fas fa-download"></i> </button></a>
      <a href="https://www.linkedin.com/in/jivan-pisal"><button class="btn"> Visit Linkedin Profile <i class="fas fa-download"></i> </button></a>
     <a href="https://www.xing.com/profile/Jivan_Pisal"><button class="btn"> Visit Xing Profile <i class="fas fa-download"></i> </button></a>
     
