--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
        
     </div>
 
-    <br> <h3 style="color: yellow;">Selected as Satara District Vice President</h3></br><br><h3>Received my first Promotional letter as Satara District Vice President at Engineering Action Committee Maharashtra State. Earlier I was the President of only one Tehsil (Khandala), but now I am responsible for 11 Tehsils (Satara, Karad, Wai, Mahabaleshwar, Phaltan, Man, Khatav, Koregaon, Patan, Jaoli and Khandala)</h3></br>
+    <br> <h3 style="color: yellow;"><br><br><br><p>Selected as Satara District Vice President</h3></br></br></br></br></p><br><h3>Received my first Promotional letter as Satara District Vice President at Engineering Action Committee Maharashtra State. Earlier I was the President of only one Tehsil (Khandala), but now I am responsible for 11 Tehsils (Satara, Karad, Wai, Mahabaleshwar, Phaltan, Man, Khatav, Koregaon, Patan, Jaoli and Khandala)</h3></br>
 
 
 
@@ -166,7 +166,7 @@
 
     </div>
 <p>
-   <strong><br><h3 style="color:yellow;">On 12-10-2020</strong></br></h3><h3>As Satara District Vice President of the Engineering Action Committee, I met Hon. MLA Makrand Aaba Patil and discussed various issues of the students. He assured that a 20% discount should be given in tuition fees and other unnecessary fees should be cancelled.</h3>
+    <strong><br><h3 style="color:yellow;"><br><br><p>On 12-10-2020</br></br></p></strong></br></h3><h3>As Satara District Vice President of the Engineering Action Committee, I met Hon. MLA Makrand Aaba Patil and discussed various issues of the students. He assured that a 20% discount should be given in tuition fees and other unnecessary fees should be cancelled.</h3>
 </p>
 <br>
 
