--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
 
     <div class="box">
-        <img src="eks.jpg" alt="">
+        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\eks.jpg" alt="">
        
     </div>
 
-    <h3 style="color: yellow;">Selected as Satara District Vice President</h3><h3>Received my first Promotional letter as Satara District Vice President at Engineering Action Committee Maharashtra State. Earlier I was the President of only one Tehsil (Khandala), but now I am responsible for 11 Tehsils (Satara, Karad, Wai, Mahabaleshwar, Phaltan, Man, Khatav, Koregaon, Patan, Jaoli and Khandala)</h3></br>
+    <br> <h3 style="color: yellow;">Selected as Satara District Vice President</h3></br><br><h3>Received my first Promotional letter as Satara District Vice President at Engineering Action Committee Maharashtra State. Earlier I was the President of only one Tehsil (Khandala), but now I am responsible for 11 Tehsils (Satara, Karad, Wai, Mahabaleshwar, Phaltan, Man, Khatav, Koregaon, Patan, Jaoli and Khandala)</h3></br>
 
 
 
@@ -159,14 +159,14 @@
 
 
     <div class="box">
-        <img src="photo1.jpg" alt="">
+        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\photo1.jpg" alt="">
     </div>
     <div class="box">   
-        <img src="photo2.jpg" alt="">
+        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\photo2.jpg" alt="">
 
     </div>
 <p>
-    <strong><h3 style="color:yellow;">On 12-10-2020</strong></h3><h3>As Satara District Vice President of the Engineering Action Committee, I met Hon. MLA Makrand Aaba Patil and discussed various issues of the students. He assured that a 20% discount should be given in tuition fees and other unnecessary fees should be cancelled.</h3>
+   <strong><br><h3 style="color:yellow;">On 12-10-2020</strong></br></h3><h3>the Satara District Vice President of the Engineering Action Committee, I met Hon. MLA Makrand Aaba Patil and discussed various issues of the students. He assured that a 20% discount should be given in tuition fees and other unnecessary fees should be cancelled.</h3>
 </p>
 <br>
 
@@ -182,10 +182,10 @@
 </br>
 
 <div class="box">
-    <img src="img1.jpeg" alt="">
+    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\img1.jpeg" alt="">
 </div>
 <div class="box">   
-    <img src="img2.jpeg" alt="">
+    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\img2.jpeg" alt="">
 
 </div>
 <p>
@@ -214,7 +214,7 @@
 
 
     <div class="box">
-        <img src="market.jpg" alt="">
+        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\market.jpg" alt="">
     </div>
     <h3 style="color:yellow;">Active NSE/BSE and Crypto Trader</h3>
     <h3>I am an active Stock Market Trader since 2018, and gained some experience of National Stock Exchange, Bombay Stock Exchange and also of Crypto Currency. </h3>
@@ -230,10 +230,10 @@
 
 
 <div class="box">
-    <img src="intern1.jpg" alt="">
+    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\intern1.jpg" alt="">
 </div>
 <div class="box">   
-    <img src="intern2.jpg" alt="">
+    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\intern2.jpg" alt="">
 
 </div>
 
@@ -259,7 +259,6 @@
 </div>
 
 </section>
-
 
 
 
