--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 
     <div class="box">
-        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\eks.jpg" alt="">
+        <img src=eks.jpg" alt="">
        
     </div>
 
@@ -159,10 +159,10 @@
 
 
     <div class="box">
-        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\photo1.jpg" alt="">
+        <img src="photo1.jpg" alt="">
     </div>
     <div class="box">   
-        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\photo2.jpg" alt="">
+        <img src="photo2.jpg" alt="">
 
     </div>
 <p>
@@ -182,10 +182,10 @@
 </br>
 
 <div class="box">
-    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\img1.jpeg" alt="">
+    <img src="img1.jpeg" alt="">
 </div>
 <div class="box">   
-    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\img2.jpeg" alt="">
+    <img src="img2.jpeg" alt="">
 
 </div>
 <p>
@@ -214,7 +214,7 @@
 
 
     <div class="box">
-        <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\market.jpg" alt="">
+        <img src="market.jpg" alt="">
     </div>
     <h3 style="color:yellow;">Active NSE/BSE and Crypto Trader</h3>
     <h3>I am an active Stock Market Trader since 2018, and gained some experience of National Stock Exchange, Bombay Stock Exchange and also of Crypto Currency. </h3>
@@ -230,10 +230,10 @@
 
 
 <div class="box">
-    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\intern1.jpg" alt="">
+    <img src="intern1.jpg" alt="">
 </div>
 <div class="box">   
-    <img src="C:\Users\INFOSOFTS\Desktop\HTML CSS Projects\Portfolio\img\intern2.jpg" alt="">
+    <img src="intern2.jpg" alt="">
 
 </div>
 
